--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,18 @@
 version: '3'
 
 services:
-  app: 
+  app:
     build: .
     volumes:
       - .:/go/src
+
+  rabbit:
+    image: "rabbitmq:3-management"
+    environment:
+      RABBITMQ_ERLANG_COOKIE: "SWQOKODSQALRPCLNMEQG"
+      RABBITMQ_DEFAULT_USER: "rabbitmq"
+      RABBITMQ_DEFAULT_PASS: "rabbitmq"
+      RABBITMQ_DEFAULT_VHOST: "/"
+    ports:
+      - "15672:15672"
+      - "5672:5672"
